force-app/main/default/objects/Zip_Code_Information__c/Zip_Code_Information__c.object-meta.xml
<CustomObject>
    <description>City/State information on Zip codes as provided by Zip-Codes.com</description>
    <label>Zip Code Information</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Zip Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zip Codes Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>