force-app/main/default/objects/Zip_Code_Information__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>The name of the city.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the city.</inlineHelpText>
    <label>City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>