force-app/main/default/objects/Zip_Code_Information__c/fields/Population__c.field-meta.xml
<CustomField>
    <fullName>Population__c</fullName>
    <description>The population of the ZIP Code based on 2010 Census data.</description>
    <inlineHelpText>The population of the ZIP Code based on 2010 Census data.</inlineHelpText>
    <label>Population</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>