force-app/main/default/objects/Zip_Code_Information__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>2 letter state name abbreviation.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>2 letter state name abbreviation.</inlineHelpText>
    <label>State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>