force-app/main/default/objects/Zip_Code_Information__c/fields/State_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>State_Full_Name__c</fullName>
    <description>The full US State Name.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The full US State Name.</inlineHelpText>
    <label>State Full Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>