force-app/main/default/objects/Zip_Code_Information__c/fields/TimeZoneAbbrev__c.field-meta.xml
<CustomField>
    <fullName>TimeZoneAbbrev__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The Abbreviation of the time zone.</inlineHelpText>
    <label>Time Zone Abbrev</label>
    <length>10</length>
    <type>Text</type>
</CustomField>