force-app/main/default/objects/Zip_Code_Information__c/fields/Zip_Code_Key__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code_Key__c</fullName>
    <description>The value used as the key for this zip code object - standard name field cannot be used as an external id.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>The value used as the key for this zip code object - standard name field cannot be used as an external id.</inlineHelpText>
    <label>Zip Code Key</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>