force-app/main/default/objects/Zip_Code_Information__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Zip_Code_Key__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>State_Full_Name__c</columns>
    <columns>AreaCode__c</columns>
    <columns>County__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>63114</value>
    </filters>
    <label>Sample Work Space</label>
</ListView>