force-app/main/default/objects/Zip_Code_Information__c/listViews/AZ_Dan.listView-meta.xml
<ListView>
    <fullName>AZ_Dan</fullName>
    <columns>NAME</columns>
    <columns>Zip_Code_Key__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>State_Full_Name__c</columns>
    <columns>AreaCode__c</columns>
    <columns>TimeZoneAbbrev__c</columns>
    <columns>TimeZoneName__c</columns>
    <columns>DaylightSavings__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>State__c</field>
        <operation>equals</operation>
        <value>AZ</value>
    </filters>
    <filters>
        <field>DaylightSavings__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Arizona</label>
</ListView>