force-app/main/default/objects/Zip_Code_Information__c/listViews/Created_Today.listView-meta.xml
<ListView>
    <fullName>Created_Today</fullName>
    <columns>NAME</columns>
    <columns>Zip_Code_Key__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>State_Full_Name__c</columns>
    <columns>AreaCode__c</columns>
    <columns>County__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Created Today</label>
    <sharedTo>
        <role>SystemAdministrator</role>
    </sharedTo>
</ListView>