force-app/main/default/objects/Zip_Code_Information__c/listViews/CT_Time_Zone.listView-meta.xml
<ListView>
    <fullName>CT_Time_Zone</fullName>
    <columns>NAME</columns>
    <columns>Zip_Code_Key__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>State_Full_Name__c</columns>
    <columns>AreaCode__c</columns>
    <columns>County__c</columns>
    <columns>TimeZoneAbbrev__c</columns>
    <columns>TimeZoneName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TimeZoneAbbrev__c</field>
        <operation>equals</operation>
        <value>CT</value>
    </filters>
    <label>CT Time Zone</label>
    <sharedTo>
        <role>SystemAdministrator</role>
    </sharedTo>
</ListView>