force-app/main/default/objects/Zip_Code_Information__c/listViews/IN.listView-meta.xml
<ListView>
    <fullName>IN</fullName>
    <columns>NAME</columns>
    <columns>Zip_Code_Key__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>State_Full_Name__c</columns>
    <columns>AreaCode__c</columns>
    <columns>County__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>State__c</field>
        <operation>equals</operation>
        <value>IN</value>
    </filters>
    <label>IN</label>
    <sharedTo>
        <role>SystemAdministrator</role>
    </sharedTo>
</ListView>